GNOME Bugzilla – Bug 748867
androidmedia: Fix slice-height for Tegra3 devices
Last modified: 2015-05-04 08:40:13 UTC
It looks like slice-height should be aligned to 16 instead of 32. The patch is untested as I don't have the relevant device to test it.
Created attachment 302833 [details] [review] androidmedia: Fix slice-height for Tegra 3 devices
This was added by commit a870e6a5c30dd85240fe75c7409cc1cf1b86541d, we should check with Josep. How do you know that this value should be different if you don't have such a device? ;)
Josep?
I needed the exact same patch for a Tegra 4 if that helps.
Comment on attachment 302833 [details] [review] androidmedia: Fix slice-height for Tegra 3 devices Ok, let's go ahead with this then :) Thanks!