androidmedia: Fix slice-height for Tegra 3 devices

https://bugzilla.gnome.org/show_bug.cgi?id=748867